<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/et_num2"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="相加"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="相加结果为:"
            />
        <TextView
            android:id="@+id/textview"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>